# video-clipper

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  railway.toml
src/: config.rs  db.rs  error.rs  main.rs  models.rs  state.rs
src/routes/: health.rs  jobs.rs  mod.rs  style.rs
src/services/: analyzer.rs  ffmpeg.rs  mod.rs  pipeline.rs  retry.rs  style_pipeline.rs  styler.rs  transcribe.rs
static/: index.html
