[package]
name = "video-clipper"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "=1.36.0", features = ["full"] }
axum = { version = "=0.7.4", features = ["multipart", "json", "ws"] }
tower-http = { version = "=0.5.2", features = ["cors", "trace", "limit"] }
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "=1.0.196", features = ["derive"] }
serde_json = "=1.0.113"
clap = { version = "=4.4.18", features = ["derive", "env"] }
anyhow = "=1.0.79"
thiserror = "=1.0.56"
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
uuid = { version = "=1.7.0", features = ["v4", "serde"] }
chrono = { version = "=0.4.34", features = ["serde"] }
base64 = "=0.21.7"
dashmap = "=5.5.3"
tokio-util = { version = "=0.7.10", features = ["io"] }

# SQLite persistent storage
rusqlite = { version = "=0.30.0", features = ["bundled"] }

# Pin transitive deps for Rust 1.75 compat
indexmap = "=2.2.2"
idna = "=0.5.0"
url = "=2.5.0"
